# dockernel

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
dockernel/: __main__.py  app.py  kernelspec.py  version.py
dockernel/cli/: __init__.py  install.py  main.py  start.py  uninstall.py
