[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["mypy>=0.971", "pytest>=7.0.1"]

[project]
name = "dockernel"
version = "1.0.2"
description = "Utility for creating dockerized Jupyter kernels"
authors = [{ name = "Blazej Michalik", email = "im.mr.mino@gmail.com" }]
maintainers = [{ name = "L8ng", email = "straydragonv@gmail.com" }]
dependencies = ["docker", "rich"]
requires-python = ">=3.6"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Source = "https://github.com/MrMino/dockernel"

[project.scripts]
dockernel = "dockernel.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"

#follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
#disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["docker"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

# Enable Pyflakes `E` and `F` codes by default.
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pyupgrade subset
    "UP",
]
# src = []
ignore = []
fix = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 10
